--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
-    <script src="Script1.js"></script>
+    <script src="FundamentalScript1.js"></script>
   </body>
 </html>
